# vectorized-test

./: .gitignore  CMakeLists.txt  README.md  file.sink.cpp  file.sink.hh  main.cpp  vectorized.file.writer.cpp  vectorized.file.writer.hh
.github/workflows/: bench.yml
posix/: file.sink.impl.cpp
results/: plot_results.py
win32/: file.sink.impl.cpp
